2008-12-01 Sarka Todorova <sarka.todorova@cern.ch>
	* default setup ( merge of ATG & MTG ) 
	* tagged as MuonTrackingGeometry-00-04-10

2008-11-28 Sarka Todorova <sarka.todorova@cern.ch>
	* prevent crash in finalization ( of multiple build of geometry ) 
	* tagged as MuonTrackingGeometry-00-04-09

2008-11-27 Sarka Todorova <sarka.todorova@cern.ch>
	* prevent memory leak in multiple build of geometry  
	* tagged as MuonTrackingGeometry-00-04-08

2008-11-26 Sarka Todorova <sarka.todorova@cern.ch>
	* memory leaks  
	* tagged as MuonTrackingGeometry-00-04-06(7)

2008-11-24 Sarka Todorova <sarka.todorova@cern.ch>
	* fix phi span calculation
	* protect material blending ( vanishing diluting factor )
	* tagged as MuonTrackingGeometry-00-04-05

2008-11-17 Sarka Todorova <sarka.todorova@cern.ch>
	* AGDD BAR volumes turned to simplified as default (AGDD bug/feature leads to excess of material)
	* AGDD naming (partly) implemented (BAR/ECT/Feet/Rail)
	* tagged as MuonTrackingGeometry-00-04-04

2008-11-04 Sarka Todorova <sarka.todorova@cern.ch>
	* full chain working with AGDD( 3D frame not optimized with AGDD material yet )
	* merge with 00-03-22-01 branch to fix RPC cutouts
	* tagged as MuonTrackingGeometry-00-04-03

2008-10-23 Sarka Todorova <sarka.todorova@cern.ch>
	* fixes simplification of volumes
	* MIMB:hardcoded fractions replaced by on-fly scan estimate
	* simplification to layers no longer supported ( no obvious reasons to do so )
	* memory leaks fixed (S.Snyder)
	* tagged as MuonTrackingGeometry-00-04-02

2008-10-20 Sarka Todorova <sarka.todorova@cern.ch>
	* first version of simplified AGDD volumes
	* blending does not work for AGDD input yet!
	* tagged as MuonTrackingGeometry-00-04-01

2008-10-06 Sarka Todorova <sarka.todorova@cern.ch>
	* first version capable to retrieve and process AGDD volumes
	* simplification and optimization does not work for AGDD input yet!
	* tagged as MuonTrackingGeometry-00-04-00

2008-10-06 Sarka Todorova <sarka.todorova@cern.ch>